rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__pg_type_is_visible.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"\n                SELECT t.oid, pg_catalog.pg_type_is_visible(t.oid) isv\n                FROM pg_catalog.pg_type t\n                ORDER BY t.oid ASC;\n                \".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+-------+-------+
| oid   | isv   |
+-------+-------+
| 16    | true  |
| 17    | true  |
| 19    | true  |
| 20    | true  |
| 21    | true  |
| 23    | true  |
| 25    | true  |
| 26    | true  |
| 27    | true  |
| 700   | true  |
| 701   | true  |
| 790   | true  |
| 869   | true  |
| 1000  | true  |
| 1001  | true  |
| 1005  | true  |
| 1007  | true  |
| 1009  | true  |
| 1016  | true  |
| 1021  | true  |
| 1022  | true  |
| 1042  | true  |
| 1043  | true  |
| 1082  | true  |
| 1083  | true  |
| 1114  | true  |
| 1184  | true  |
| 1186  | true  |
| 1266  | true  |
| 1700  | true  |
| 2249  | true  |
| 2277  | true  |
| 2283  | true  |
| 3220  | true  |
| 3500  | true  |
| 3831  | true  |
| 3904  | true  |
| 3906  | true  |
| 3908  | true  |
| 3910  | true  |
| 3912  | true  |
| 3926  | true  |
| 4451  | true  |
| 4532  | true  |
| 4533  | true  |
| 4535  | true  |
| 4536  | true  |
| 13408 | false |
| 13410 | false |
| 18001 | true  |
| 18002 | true  |
| 18013 | true  |
| 18014 | true  |
+-------+-------+
